syntax = "proto3";

option csharp_namespace = "Bicep.Local.Extension.Rpc";

package extension;

service BicepExtension {
  rpc CreateOrUpdate (ResourceRequestBody) returns (ResourceResponse);
  rpc Preview (ResourceRequestBody) returns (ResourceResponse);
  rpc Get (ResourceReferenceRequestBody) returns (ResourceResponse);
  rpc Delete (ResourceReferenceRequestBody) returns (ResourceResponse);
  rpc Ping(Empty) returns (Empty);
}

message Empty {}

message ResourceRequestBody {
	optional string config = 1;
	string type = 2;
	optional string apiVersion = 3;
	string properties = 4;
}

message ResourceReferenceRequestBody {
	string identifiers = 1;
	optional string config = 2;
	string type = 3;
	optional string apiVersion = 4;
}

message ResourceResponse {
	oneof result {
		ResourceResponseBody response = 1;
		ErrorPayload error = 2;
	}
}

message ResourceResponseBody {
	optional string identifiers = 1;
	string type = 2;
	optional string status = 3;
	optional string apiVersion = 4;
	string properties = 5;
}

message ErrorPayload {
	string code = 1;
	optional string target = 2;
	string message = 3;
	repeated ErrorDetail details = 4;
	optional string innerError = 5;
}

message ErrorDetail {
	string code = 1;
	optional string target = 2;
	string message = 3;
}